fix: add Kotlin+Gradle build template and fix validator false-positives
- SKILL.md: add complete build.gradle.kts template for Kotlin with the
  three omissions that cause build failures (kotlin plugin order,
  mavenCentral repository, --add-opens for Java 21)
- SKILL.md: document src/gatling/kotlin/ and src/gatling/resources/ dirs
- SKILL.md: correct wrong Gradle 9 note — plugin 3.14+ supports Gradle 9
- validate.sh: check src/gatling/ paths alongside src/test/ for Gradle
- validate.sh: add src/gatling/resources/ to resources search paths